--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "pure-react-carousel": "^1.27.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-modal": "^3.11.2",
+    "react-scripts": "3.4.1",
+    "react-scroll": "^1.8.0",
+    "react-step-progress-bar": "^1.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
