--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.13.1",
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
+    "react-ga": "^3.1.2",
     "react-html-parser": "^2.0.2",
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.2.0",
