--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^7.17.2",
     "pure-react-carousel": "^1.27.1",
     "react": "^16.13.1",
+    "react-burger-menu": "^2.7.1",
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-ga": "^3.1.2",
