--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.13.1",
     "react-ga": "^3.1.2",
     "react-html-parser": "^2.0.2",
+    "react-loader-spinner": "^3.1.14",
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
